[project]
name = "ppo-implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "TabitoSaito",email = "domi2601.hoelzl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
