[project]
name = "ppo-implementation"
version = "0.1.0"
description = ""
authors = [{ name = "TabitoSaito", email = "domi2601.hoelzl@gmail.com" }]
requires-python = ">=3.12,<3.15"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "tensorboard>=2.20.0",
    "moviepy==1.0.3",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
